# bog

./: Cargo.toml  README.md
src/: configuration.rs  inference.rs  main.rs  models.rs  template.rs  utils.rs
src/prompt_templates/: bog.toml
