[package]
name = "bog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
serenity = { version = "0.12.0", features = ["framework", "standard_framework"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
